themes/default/css/forms.css
/* ... */
span.validated-checkbox .off,
span.validated-checkbox.checked .on {
	display: inline-block;
}

span.validated-checkbox::after {
	content: '';
	display: block;
	height: 100%;
	width: 50%;
	border-radius: {$GET,border_radius};
	background: {$GET,WB};
	float: left;
	margin-right: 4px;
}

span.validated-checkbox.checked::after {
	float: right;
	margin-right: 0;
}

span.validated-checkbox + input[name="validated"].input-tick {
	padding-right: 0.5em;
	z-index: 100;
	position: relative;
	opacity: 0;
}

.date-datepicker-button {
	font-size: 1.15em;
	vertical-align: middle;
}

.various-ticks, .input-other-tick {
	white-space: nowrap;
}

.various-ticks .input-individual-tick, .input-other-tick {
	margin: 1em 1em 1em 0; /* Designed to make it fill whole box, i.e. equalise against the th's (to the left) height */
	float: left;
	font-size: 0.9em;
	vertical-align: middle;
}

.various-ticks .input-individual-tick + .input-individual-tick {
	margin-left: 0.5em;
}

.various-ticks label input, .various-ticks label span {
	vertical-align: middle;
}

.input-other-tick {
	margin-top: -0.5em;
	clear: both;
}

.various-ticks .input-individual-tick input {
	margin-bottom: 0;
}

.syndication-options span {
	white-space: nowrap;
	border-right: 1px solid {$GET,pale_border};
	font-size: 0.9em;
	padding-right: 0.5em;
	margin-right: 0.3em;
}
.syndication-options span:last-child {
	border-right: 0;
}

.help-icon + div + .radio-list {
	clear: right;
	margin-top: 30px;
}

.radio-list-pictures {
	{$BETA_CSS_PROPERTY,display: flex;}
	flex-wrap: wrap;
	margin: -0.5em 0 0 -0.5em;
}
.radio-list-pictures.linear {
	display: block;
	margin: 0;
}

.radio-list-picture {
	margin: calc(0.5em + 2px) 0 0 calc(0.5em + 2px);
	font-size: 0.8em;
	text-align: center;
	cursor: pointer;

	/* Number based around topic emoticons emoticons */
	min-width: 40px;
}
.radio-list-picture.linear {
	margin: 1em;
	border: 1px solid {$GET,standard_border};
	opacity: 1.0;
}

.radio-list-picture label {
	cursor: pointer;
	display: block;
}

.radio-list-picture.selected img {
	outline: 1px dotted;
}
.radio-list-picture img {
	max-width: 100px;
	height: auto;
}
.theme-image--header-classic-image .radio-list-picture img {
	max-width: 300px;
}

.radio-list-picture label.js-widget {
	visibility: hidden;
	width: 0;
	height: 0;
	font-size: 0;
}
.page-running-admin-themes .radio-list-picture label.js-widget, .page-running-admin-zones .radio-list-picture label.js-widget {
	visibility: visible;
	width: auto;
	height: auto;
	font-size: inherit;
}

.radio-list-picture {
	opacity: 0.5;
}
.radio-list-picture:hover, .radio-list-picture.selected {
	opacity: 1.0;
}

.selectable-theme-image {
	padding: 0.3em;
	margin: 1px;
}

/* Form colour chooser */

.form-table .css-colour-chooser-name {
	width: 190px;
}

.css-colour-strip {
	float: left;
	width: 4px;
	height: 15px;
}

.css-colour-chooser {
	height: 50px;
	margin: 0 auto;
}

.field-input .css-colour-chooser {
	width: auto;
	height: auto;
	margin: 0;
}

.css-colour-chooser-name {
	font-weight: bold;
	float: left;
}

.css-colour-chooser-name input {
	color: {$GET,unfilled_input_text};
	margin-top: 0.5em;
	display: block;
}

.css-colour-chooser-from {
	float: left;
	margin: 0 0 0 10px;
}

.field-input .css-colour-chooser-from {
	display: none;
}

.css-colour-chooser-to {
	float: right;
	margin-left: 0;
}

.css-colour-chooser-fixed {
	width: 366px;
	float: left;
	margin-top: 3px; /* As the selection bars overflow a bit */
}

.field-input .css-colour-chooser-fixed {
	width: 306px;
}

.css-colour-chooser-from, .css-colour-chooser-to {
	padding-top: 5px;
	height: 45px;
	font-size: 0.9em;
	width: 50px;
	display: inline;
	font-weight: bold;
	text-align: center;
	cursor: default;
}

.css-colour-chooser-colour {
	height: 45px;
	width: 256px;
	display: inline;
}

.css-colour-chooser-colour > div {
	overflow: hidden;
}

.css-colour-chooser-context {
	padding-top: 50px;
	font-style: italic;
}

/* Previews */

.form-screen-iframe {
	width: 100%;
	height: 0; /* Will be dynamically adjusted */
}

.preview-box {
	margin: 1em 0;
}

/*{+START,CSS_MODE,mobile}*/
	.mobile.preview-box {
		padding: 84px 36px 104px 34px;
		width: 381px;
		height: 724px;
		background: url('{$IMG;,iphone}') no-repeat;
		background-size: 381px 724px;
		cursor: crosshair;
	}
	.mobile .preview-box-inner {
		overflow: hidden;
		width: 100%;
		height: 100%;
	}
/*{+END}*/

.preview-checking-box {
	width: 34em;
	margin: 1em auto 3em auto;
}

/* Posting forms */

.word-count {
	float: right;
	font-size: 0.8em;
	padding: 4px;
}

/*{+START,CSS_MODE,mobile}*/
	.post-options-wrap {
		display: none;
	}
/*{+END}*/

.btn-comcode {
	color: {$GET,WB} !important;
	position: relative;
	overflow: hidden;
	padding: 2px 4px;
	text-align: left;
}

.btn-comcode:not(.btn-sm) {
	min-height: 40px;
}

.btn-comcode-text {
	text-transform: lowercase;
	font-size: 0.8em;
	float: left;
	white-space: normal;
}

.btn-comcode .icon {
	display: block;
}

.btn-comcode-thumb,
.btn-comcode-block,
.btn-comcode-url,
.btn-comcode-box,
.btn-comcode-email,
.btn-comcode-comcode,
.btn-comcode-apply_changes {
	padding-right: 35px;
}

.btn-comcode-thumb .icon,
.btn-comcode-block .icon,
.btn-comcode-comcode .icon,
.btn-comcode-url .icon,
.btn-comcode-box .icon,
.btn-comcode-apply_changes .icon {
	position: absolute;
	width: 28px;
	height: 28px;
	right: 5px;
	top: 50%;
	margin-top: -14px;
}

.btn-comcode-list,
.btn-comcode-page,
.btn-comcode-quote,
.btn-comcode-code,
.btn-comcode-html {
	text-align: center;
}

.btn-comcode-list .icon,
.btn-comcode-page .icon,
.btn-comcode-quote .icon,
.btn-comcode-code .icon,
.btn-comcode-html .icon,
.btn-comcode-hide .icon {
	position: absolute;
	bottom: 3px;
	left: 50%;
	margin-left: -9px;
	width: 18px;
	height: 18px;
}

.btn-comcode-url .btn-comcode-text {
	max-width: 2.5em;
}

.btn-comcode-code .icon {
	width: 32px;
	height: 32px;
	margin-left: 0;
	left: 3px;
	bottom: -5px;
}
/* ... */

